# call_me_maybe

./: .flake8  .gitignore  Makefile  README.md  claude.md  pyproject.toml  test.py  testing.py
data/output/: function_calls.json
docs/: argparse.md  dataclasses.md  json.md  os.md  path.md  pydantic.md  python.md
src/: __init__.py  __main__.py  application.py  errors.py  io_handler.py  models.py  prompt_builder.py  pyproject.toml  vocab.py
