[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Constrained function-call generation with a small language model"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
exclude = ["^llm_sdk/"]
