[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling tool that translates natural language prompts into structured function calls using constrained decoding."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true